Support schema refs.
